k8s/gatekeeper/templates/constraint-nonprivileged.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPNonPrivileged
metadata:
  name: disallow-privileged
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "gatekeeper-system"]
